--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -42,13 +42,42 @@
 }
 
 /* desktop */
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 990px) {
+
+    .header-icons-desktop {
+        display: inline-block;
+    }
+    #hamburgher {
+        display: none;
+    }
     main #blu-card {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 10px 20vw;
     }
+    #blu-card .column {
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+    #blu-card .column img {
+        align-self: flex-end;
+    }
+    #text {
+        flex-basis: 50%;
+    }
+    #img {
+        flex-basis: 50%;
+        align-self: flex-end;
+    }
+    #card-white {
+        align-self: flex-end;
+    }
+    #card-white img {
+        width: 50%;
+        margin: 0 auto;
+    }
+    
     
     #blu-card .card {
         flex-basis: calc(((100% / 3.2)*1));
@@ -61,7 +90,7 @@
         margin: 10px 20vw;
     }
     #planning .card {
-        margin: 30px 0;
+        margin: 0;
     }
     .violet .column {
         flex-direction: row;
